[modify]add sdk.

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
     </head>
     <body>
         <h1>
-            Go HMR app @ 2016 Goodpatch devcamp
+         Go HMR app @ 2016 Goodpatch devcamp
         </h1>
         <div id="view"></div>
+        <div id="dynamic-script"></div>
 
-        <script src="/js/bundle.js"></script>
+        <script src="/js/bundle.sdk.js"></script>
     </body>
 </html>
