[modify]add README

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
         <div id="dynamic-script"></div>
 
         <script src="/js/bundle.client.js"></script>
-        <script src="/js/bundle.sdk.js"></script>
+        <script src="/js/bundle.example.js"></script>
     </body>
 </html>
